--- a/layout/home.html
+++ b/layout/home.html
@@ -10,15 +10,26 @@
     <div class="container">
         <div class="header">
             <div id="finnesse">
-
+                <h1>Finnesse</h1>
             </div>
-            <div id="nav">
-
+            <div class="navbar">
+                <nav >
+                    <a href="#">Home</a>
+                    <a href="#">Blogs</a>
+                    <a href="#">Videos</a>
+                    <a href="#">Biography</a>
+                    <a href="#">Contact</a>
+                </nav>
             </div>
         </div>
 
         <div class="content">
-
+            <div class="content-box">
+                <h1>Creating Excellence Skill and Style</h1>
+                <form method="" action="">
+                    <button>Sign up for my Newsletter</button>
+                </form>
+            </div>
         </div>
 
         <div class="footer">
