set navbar properties to align on header

--- a/layout/home.html
+++ b/layout/home.html
@@ -4,23 +4,24 @@
     <meta charset="utf-8" />
     <title>Finnesse</title>
     <meta name="description" content="A multi-page blogsite" />
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
     <div class="container">
-        <div class="header">
-            <div id="finnesse">
-                <h1>Finnesse</h1>
-            </div>
-            <div class="navbar">
-                <nav >
-                    <a href="#">Home</a>
-                    <a href="#">Blogs</a>
-                    <a href="#">Videos</a>
-                    <a href="#">Biography</a>
-                    <a href="#">Contact</a>
-                </nav>
-            </div>
+        <div class="header-container">
+            <nav class="navbar">
+                <div id="finnesse">
+                    <a>Finnesse</a>
+                </div>
+                <ul class="navs">
+                    <li class="nav-item"><a href="#">Home</a></li>
+                    <li class="nav-item"><a href="#">Blogs</a></li>
+                    <li class="nav-item"><a href="#">Videos</a></li>
+                    <li class="nav-item"><a href="#">Biography</a></li>
+                    <li class="nav-item"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
 
         <div class="content">
