--- a/css/home.css
+++ b/css/home.css
@@ -1,38 +1,66 @@
+html {
+    box-sizing: border-box;
+  }
+
+  /* *, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+  } */
+
 body {
     background-image: url("../image/rain.jpg");
     /* background-repeat: no-repeat; */
     background-size: cover;
 }
+
+nav {
+    width: 100%;
+    padding-left: 20px;
+}
 .container {
     display: grid;
     grid-template-rows: 100px 600px 100px;
-    /* grid-template-columns: ; */
-    /* grid-template-areas: 
-    "hd hd hd hd hd hd"
-    "main main main main main main"
-    "ft ft ft ft hd hd"; */
     grid-gap: 1px;
 }
 
-.header {
-    display: grid;
-    grid-template-columns: 30% 50%;
-    grid-gap: 4px;
+.header-container {
+    
 }
 
 #finnesse {
     color: red;
-    border: 1px solid red;
+    display: inline-block;
+    font-family: 'Sofia';
+    font-size: 70px;
+    padding-left: 30px;
 }
 
 .navbar{
     display: flex;
-    align-items: stretch;
-    justify-content: flex-end;
-    border: 1px solid red;
-    padding: 20px;
-    margin: 25px;
+    align-items: center;
+    justify-content: space-between;
 }
+
+.navs {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding-right: 50px;
+}
+
+.nav-item a {
+    display: inline-block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: white;
+  }
+  /* .nav-item:hover {
+    background-color: white;
+  } */
+  .nav-item:hover a{
+    background-color: darkgreen;
+  }
 
 .content {
     display: flex;
