--- a/layout/home.html
+++ b/layout/home.html
@@ -12,7 +12,7 @@
         <div class="header-container">
             <nav class="navbar">
                 <div id="finnesse">
-                    <a>Finnesse</a>
+                    <a href="#">Finnesse</a>
                 </div>
                 <ul class="navs">
                     <li class="nav-item"><a href="#">Home</a></li>
@@ -26,10 +26,12 @@
 
         <div class="content">
             <div class="content-box">
-                <h1>Creating Excellence Skill and Style</h1>
-                <form method="" action="">
-                    <button>Sign up for my Newsletter</button>
-                </form>
+                <h1 id="text" >Creating Excellence Skills and Styles</h1>
+                <div>
+                    <form method="" action="">
+                        <button>Sign up for my Newsletter</button>
+                    </form>
+                </div>
             </div>
         </div>
 
