add blog content and design

--- a/layout/blog.html
+++ b/layout/blog.html
@@ -3,7 +3,7 @@
     <head>
         <title>Finnesse-blog</title>
         <meta name="description" content="blog-page" />
-        <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Tangerine|Inconsolata|Droid+Sans|Sofia' rel='stylesheet'> 
         <link rel="stylesheet" href="../css/blog.css" />
     </head>
     <body>
@@ -11,14 +11,45 @@
 
         </div>
         <div class="title">
-
+            <h1>Blog Title</h1>
+            <h3>December 20, 2019</h3>
         </div>
         <div class="content">
             <div class="img">
-        
+                <img src="../image/nature.jpg"/>
             </div>
             <div class="main">
-            
+                <p style="font-family: Sofia">
+                    <span class="firstcharacter">t</span>he browser support for 
+                    initial-letter is pretty sparse at 
+                    the time of this writing, but it can be used to calculate the 
+                    number of lines the drop capped letter should occupy 
+                    and the font size instead of doing that on your own.
+                    The browser support for initial-letter is pretty sparse at
+                    the time of this writing, but it can be used to calculate the 
+                    number of lines the drop capped letter should occupy 
+                    and the font size instead of doing that on your own.
+                    The browser support for initial-letter is pretty sparse at
+                    the time of this writing, but it can be used to calculate the 
+                    number of lines the drop capped letter should occupy 
+                    and the font size instead of doing that on your own.
+                    The browser support for initial-letter is pretty sparse at
+                    the time of this writing, but it can be used to calculate the 
+                    number of lines the drop capped letter should occupy 
+                    and the font size instead of doing that on your own.
+                    The browser support for initial-letter is pretty sparse at
+                    the time of this writing, but it can be used to calculate the 
+                    number of lines the drop capped letter should occupy 
+                    and the font size instead of doing that on your own.
+                    The browser support for initial-letter is pretty sparse at
+                    the time of this writing, but it can be used to calculate the 
+                    number of lines the drop capped letter should occupy 
+                    and the font size instead of doing that on your own.
+                    The browser support for initial-letter is pretty sparse at
+                    the time of this writing, but it can be used to calculate the 
+                    number of lines the drop capped letter should occupy 
+                    and the font size instead of doing that on your own.
+                </p>
             </div>
         </div>
         <div class="footer">
