--- a/css/blog.css
+++ b/css/blog.css
@@ -23,35 +23,62 @@ body {
     border: 1px solid darkorange;
 }
 
+.title {
+    grid-area: t;
+    background-color: rgb(248, 234, 234);
+    height: 100px;
+    font-family: "Tangerine", serif;
+    text-align: center;
+    /* border: 1px solid purple; */
+} 
+
 .content {
     grid-area: c;
     display: flex;
     justify-content: space-around;
     height: 500px;
-    border: 1px solid yellowgreen;
+    background-color: rgb(248, 234, 234);
+    /* border: 1px solid yellowgreen; */
 }
 
 .img {
     width: 30%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+
+img {
+    width: 481.39px;
+    height: 500px;
 }
 
 .main {
     width: 60%;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
+    text-align: center;
 }
 
-.title {
-    grid-area: t;
-    height: 100px;
-    border: 1px solid purple;
-}
+.firstcharacter {
+    text-transform: uppercase;
+    float: left;
+    font-family: "Georgia", serif;
+    font-size: 75px;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+  }
 
-/* .blog-content {
-    height: 490px;
-    border: 1px solid brown;
-} */
-
+  p {
+    font-family: "Adobe Caslan pro", "Hoefler Text", Georgia, Garamomd, Times, serif;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    margin: 50px auto;
+    padding-top: 11px;
+    line-height: 200%;
+    color: rgb(70, 52, 52);
+  }
+  
 .footer {
     grid-area: ft;
     height: 100px;
