--- a/layout/blog.html
+++ b/layout/blog.html
@@ -7,8 +7,18 @@
         <link rel="stylesheet" href="../css/blog.css" />
     </head>
     <body>
-        <div class="header">
-
+        <nav class="navbar">
+            <div id="finnesse">
+                <a href="#">Finnesse</a>
+            </div>
+            <ul class="navs">
+                <li class="nav-item"><a href="#">Home</a></li>
+                <li class="nav-item"><a href="#">Blogs</a></li>
+                <li class="nav-item"><a href="#">Videos</a></li>
+                <li class="nav-item"><a href="#">Biography</a></li>
+                <li class="nav-item"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
         </div>
         <div class="title">
             <h1>Blog Title</h1>
@@ -16,39 +26,23 @@
         </div>
         <div class="content">
             <div class="img">
-                <img src="../image/nature.jpg"/>
+                <img src="../image/rain.jpg"/>
             </div>
             <div class="main">
                 <p style="font-family: Sofia">
-                    <span class="firstcharacter">t</span>he browser support for 
-                    initial-letter is pretty sparse at 
-                    the time of this writing, but it can be used to calculate the 
-                    number of lines the drop capped letter should occupy 
-                    and the font size instead of doing that on your own.
-                    The browser support for initial-letter is pretty sparse at
-                    the time of this writing, but it can be used to calculate the 
-                    number of lines the drop capped letter should occupy 
-                    and the font size instead of doing that on your own.
-                    The browser support for initial-letter is pretty sparse at
-                    the time of this writing, but it can be used to calculate the 
-                    number of lines the drop capped letter should occupy 
-                    and the font size instead of doing that on your own.
-                    The browser support for initial-letter is pretty sparse at
-                    the time of this writing, but it can be used to calculate the 
-                    number of lines the drop capped letter should occupy 
-                    and the font size instead of doing that on your own.
-                    The browser support for initial-letter is pretty sparse at
-                    the time of this writing, but it can be used to calculate the 
-                    number of lines the drop capped letter should occupy 
-                    and the font size instead of doing that on your own.
-                    The browser support for initial-letter is pretty sparse at
-                    the time of this writing, but it can be used to calculate the 
-                    number of lines the drop capped letter should occupy 
-                    and the font size instead of doing that on your own.
-                    The browser support for initial-letter is pretty sparse at
-                    the time of this writing, but it can be used to calculate the 
-                    number of lines the drop capped letter should occupy 
-                    and the font size instead of doing that on your own.
+                    <span class="firstcharacter">l</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
+                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam 
+                    voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione 
+                    voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, 
+                    sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima 
+                    veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis 
+                    autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
+                    eum fugiat quo voluptas nulla pariatur?
                 </p>
             </div>
         </div>
